# solana-movie-program

./: .gitignore  Cargo.toml  README.md
src/: entrypoint.rs  error.rs  instruction.rs  processor.rs  state.rs
unit-tests/: movie_review_test.rs
