[package]
name = "pda-local"
version = "0.1.0"
edition = "2021"

[features]
no-entrypoint = []

[dependencies]
solana-program = "2.0.10"
borsh = "1.5.1"
thiserror = "1.0.63"
spl-token = { version="6.0.0", features = [ "no-entrypoint" ] }
spl-associated-token-account = { version="5.0.1", features = [ "no-entrypoint" ] }

[lib]
crate-type = ["cdylib", "lib"]
